Move microtask queue into tonic
Moving the microtask queue into tonic solves three problems:

1) Removes three levels of indirection when invoking microtask
callbacks.
2) Removes the sky/engine/dom directory entirely.
3) Removes the last client of the (inefficient) DartValue class.

--- a/engine/src/flutter/sky/engine/tonic/BUILD.gn
+++ b/engine/src/flutter/sky/engine/tonic/BUILD.gn
@@ -33,6 +33,8 @@ source_set("tonic") {
     "dart_library_natives.h",
     "dart_library_provider.cc",
     "dart_library_provider.h",
+    "dart_microtask_queue.cc",
+    "dart_microtask_queue.h",
     "dart_persistent_value.cc",
     "dart_persistent_value.h",
     "dart_snapshot_loader.cc",
@@ -45,8 +47,6 @@ source_set("tonic") {
     "dart_string_cache.h",
     "dart_timer_heap.cc",
     "dart_timer_heap.h",
-    "dart_value.cc",
-    "dart_value.h",
     "dart_wrappable.cc",
     "dart_wrappable.h",
     "dart_wrapper_info.h",
