Dart/JNI: reflection-based wrapper for the raw JNI API
Example:
  JavaClass dateFormatClass = Java.getClass('java.text.SimpleDateFormat');
  JavaObject format = dateFormatClass.newInstance('yyyy.MM.dd');
  print(format.parse('2016.01.01').getYear());

--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -63,6 +63,8 @@ action("generate_snapshot_bin") {
     "//dart/runtime/tools/create_snapshot_bin.py",
     "//sky/engine/bindings/internals.dart",
     "//sky/engine/bindings/jni/jni.dart",
+    "//sky/engine/bindings/jni/jni_raw.dart",
+    "//sky/engine/bindings/jni/jni_helper.dart",
     "snapshot.dart",
   ] + rebase_path(dart_mojo_internal_sdk_sources,
                   "",
