Improve handling of window insets on Android
Now that we understand window insets, we don't need to hard-code the size of
the status bar. Also, convert the viewport metrics to be consistently in
physical pixels.

--- a/engine/src/flutter/sky/shell/platform/android/AndroidManifest.xml
+++ b/engine/src/flutter/sky/shell/platform/android/AndroidManifest.xml
@@ -15,7 +15,8 @@
                   android:hardwareAccelerated="true"
                   android:launchMode="standard"
                   android:name="SkyActivity"
-                  android:theme="@android:style/Theme.Black.NoTitleBar">
+                  android:theme="@android:style/Theme.Black.NoTitleBar"
+                  android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
