Support dynamic registration of mojo services on Android
SkyApplication now reads service info from a services.json file bundled
with the apk. For each service, it registers a method that invokes
connectToService on a named class. This way, third party services can
register themselves.

There's a corresponding change to flutter_tools to generate this
services.json when building an apk that depends on services.

--- a/engine/src/flutter/sky/BUILD.gn
+++ b/engine/src/flutter/sky/BUILD.gn
@@ -28,9 +28,17 @@ group("sky") {
 
   if (is_android) {
     deps += [ "//sky/services/activity" ]
+
+    # TODO(mpcomplete): This is temporary until we move GCM out of the engine
+    # repo.
+    deps += [
+      "//sky/services/gcm:gcm_lib",
+      "//sky/services/gcm:interfaces_java",
+    ]
   }
 
   if (!is_android) {
     deps += [ "//third_party/mesa:osmesa" ]
   }
+
 }
