--- a/engine/src/flutter/sky/BUILD.gn
+++ b/engine/src/flutter/sky/BUILD.gn
@@ -4,6 +4,11 @@
 
 import("//sky/engine/bindings/bindings.gni")
 
+declare_args() {
+  enable_gcm = false
+  enable_firebase = false
+}
+
 group("sky") {
   testonly = true
 
@@ -28,17 +33,19 @@ group("sky") {
 
   if (is_android) {
     deps += [ "//sky/services/activity" ]
-
-    # TODO(mpcomplete): This is temporary until we move GCM out of the engine
-    # repo.
-    deps += [
-      "//sky/services/gcm:gcm_lib",
-      "//sky/services/gcm:interfaces_java",
-    ]
   }
 
   if (!is_android) {
     deps += [ "//third_party/mesa:osmesa" ]
   }
 
+  # TODO(mpcomplete): This is temporary until we move GCM and Firebase
+  # out of the engine repo.
+  if (enable_firebase) {
+    deps += [ "//sky/services/firebase" ]
+  }
+
+  if (enable_gcm) {
+    deps += [ "//sky/services/gcm" ]
+  }
 }
