--- a/engine/src/flutter/mojo/skia/BUILD.gn
+++ b/engine/src/flutter/mojo/skia/BUILD.gn
@@ -6,8 +6,14 @@ source_set("skia") {
   sources = [
     "ganesh_context.cc",
     "ganesh_context.h",
-    "ganesh_surface.cc",
-    "ganesh_surface.h",
+    "ganesh_framebuffer_surface.cc",
+    "ganesh_framebuffer_surface.h",
+    "ganesh_image_factory.cc",
+    "ganesh_image_factory.h",
+    "ganesh_texture_surface.cc",
+    "ganesh_texture_surface.h",
+    "type_converters.cc",
+    "type_converters.h",
   ]
 
   deps = [
@@ -15,6 +21,8 @@ source_set("skia") {
     "//base",
     "//mojo/gpu",
     "//mojo/public/c/gpu",
+    "//mojo/public/c/gpu:MGL",
+    "//mojo/services/geometry/interfaces",
     "//skia",
   ]
 }
@@ -26,6 +34,7 @@ source_set("skia_bindings") {
   ]
   deps = [
     "//mojo/public/c/gpu",
+    "//mojo/public/c/gpu:GLES2",
     "//skia",
   ]
 }
