--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -214,6 +214,8 @@ sky_core_files = [
   "text/Paragraph.h",
   "text/ParagraphBuilder.cpp",
   "text/ParagraphBuilder.h",
+  "text/TextBox.cpp",
+  "text/TextBox.h",
   "window/window.cc",
   "window/window.h",
 ]
