Extract system sound and vibration functionality out of activity.mojom

--- a/engine/src/flutter/sky/services/platform/BUILD.gn
+++ b/engine/src/flutter/sky/services/platform/BUILD.gn
@@ -6,8 +6,10 @@ import("//mojo/public/tools/bindings/mojom.gni")
 
 mojom("interfaces") {
   sources = [
-    "system_chrome.mojom",
+    "haptic_feedback.mojom",
     "path_provider.mojom",
+    "system_chrome.mojom",
+    "system_sound.mojom",
   ]
 }
 
